[gd_scene load_steps=16 format=2]

[ext_resource path="res://fonts/InputMono-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://ui/ButtonTheme.tres" type="Theme" id=3]
[ext_resource path="res://ui/textures/T_game_logo.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )
width = 200

[sub_resource type="Animation" id=11]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Underline:visible")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer2"]
margin_right = 1920.0
margin_bottom = 538.0
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
margin_top = 600.0
margin_right = 1920.0
margin_bottom = 1000.0
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 133.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.678431, 0.4, 1 )
custom_colors/font_color_hover = Color( 0, 0.803922, 0.47451, 1 )
text = "PLAY"

[node name="Credits" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_top = 133.0
margin_right = 1920.0
margin_bottom = 266.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.678431, 0.4, 1 )
custom_colors/font_color_hover = Color( 0, 0.803922, 0.47451, 1 )
text = "CREDITS"

[node name="Quit" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_top = 266.0
margin_right = 1920.0
margin_bottom = 400.0
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.678431, 0.4, 1 )
custom_colors/font_color_hover = Color( 0, 0.803922, 0.47451, 1 )
text = "QUIT"

[node name="Underline" type="TextureRect" parent="."]
margin_left = 844.0
margin_top = 722.0
margin_right = 1073.0
margin_bottom = 734.0
texture = SubResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/Blink = SubResource( 11 )
[connection signal="mouse_entered" from="VBoxContainer2/VBoxContainer/Play" to="." method="_on_Play_mouse_entered"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="VBoxContainer2/VBoxContainer/Credits" to="." method="_on_Credits_mouse_entered"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/Credits" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="VBoxContainer2/VBoxContainer/Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
